@@ -48,3 +48,6 @@ issues = 1
 
 [@Git]
 untracked_files = ignore
+
+[Prereqs]
+Syntax::Keyword::Try = 0.18
